maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:10: error: identifier expected but '[' found.
def trouverBis():[Int](2) = {
                 ^